--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,21 @@
 {
+    "name": "olshansky/slim-skeleton",
+    "type": "project",
+    "description": "Just Slim Framework Skeleton",
+    "keywords": [
+        "framework",
+        "slim"
+    ],
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
     "require": {
         "slim/slim": "^3.0",
         "vlucas/phpdotenv": "^5.0",
-        "slim/twig-view": "^2.0"
+        "slim/twig-view": "^2.0",
+        "illuminate/database": "^8.0"
     },
     "autoload": {
         "psr-4": {
